<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:cardCornerRadius="20dp"
    tools:context=".view.UserDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView_detail"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:src="@drawable/ic_launcher_background" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/username_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/user_name"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/email_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/username_detail"
                android:layout_marginTop="10dp"
                android:text="@string/sample_email"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/address_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email_detail"
                android:layout_marginTop="10dp"
                android:text="@string/sample_address"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>